--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,9 @@
         // PhoneGap event handler
         document.addEventListener("deviceready", onDeviceReady, false);
         function onDeviceReady() {
-            console.log("PhoneGap is ready1");
+            console.log("PhoneGap is ready1");ggggggggggggggggg
+
+            
         }
     </script>
 </head>
